# dqc-qube

./: Dockerfile  README.docker.md  README.md  app.py  docker-compose.yml  pyproject.toml  run_server.py
mqt_bench_test/: predictor_training.py  test_benchmark.py
mqt_bench_test/openqasm_examples/: full_adder_indep_opt0_4.qasm  full_adder_indep_opt3_4.qasm
openqasm_examples/: EXAMPLES.md  full_adder_alg_4.qasm  test_benchmark.py
pipeline/: benchmark_pipeline.py  evaluation_pipeline.py  train_pipeline.py
pipeline/converters/: __init__.py  errors.py  pennylane_converter.py  qiskit_converter.py  sandbox.py
problems/: README.md
problems/bell_state/: metadata.json  problem.md  reference_circuit.py  starter.py  tests.py
problems/h2_vqe/: metadata.json  problem.md  starter.py  tests.py
problems/qft/: metadata.json  problem.md  reference_circuit.py  starter.py  tests.py
problems/vqe_real_amp/: metadata.json  problem.md  reference_circuit.py  starter.py  tests.py  vqe_real_amp_alg_5.qasm
tests/: test_benchmark.py  test_evaluation_pipeline.py  test_pennylane_converter.py  test_qiskit_converter.py  vqe_h2.py
tests/openqasm_circuits/: dj_alg_5.qasm  full_adder_alg_4.qasm  qft_alg_5.qasm
