[project]
name = "dqc-qube"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mqt-bench>=2.2.2",
    "mqt-predictor>=2.3.0",
    "pennylane>=0.45.0",
    "plotly>=6.7.0",
    "qiskit>=2.4.1",
    "shiny>=1.6.2",
    "shinywidgets>=0.8.1",
]
